// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppEditPage should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        will-test-dev-co-voracious-person
      </mock-styled.h1>
      <mock-styled.div
        classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
      >
        <mock-styled.div>
          <mock-styled.input
            id="general"
            name="app-edit-tabs"
            type="radio"
            value="general"
          />
          <mock-styled.label
            htmlfor="general"
          >
            <span
              class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
            >
              About Listings
            </span>
          </mock-styled.label>
          <mock-styled.input
            id="app-listing"
            name="app-edit-tabs"
            type="radio"
            value="app-listing"
          />
          <mock-styled.label
            htmlfor="app-listing"
          >
            <span
              class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
            >
              AppMarket Listing
            </span>
          </mock-styled.label>
          <mock-styled.input
            id="authentication"
            name="app-edit-tabs"
            type="radio"
            value="authentication"
          />
          <mock-styled.label
            htmlfor="authentication"
          >
            <span
              class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
            >
              Authentication
            </span>
          </mock-styled.label>
          <mock-styled.input
            id="permissions"
            name="app-edit-tabs"
            type="radio"
            value="permissions"
          />
          <mock-styled.label
            htmlfor="permissions"
          >
            <span
              class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
            >
              Permissions
            </span>
          </mock-styled.label>
          <mock-styled.input
            id="ac-integration"
            name="app-edit-tabs"
            type="radio"
            value="ac-integration"
          />
          <mock-styled.label
            htmlfor="ac-integration"
          >
            <span
              class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
            >
              AgencyCloud Integration
            </span>
          </mock-styled.label>
        </mock-styled.div>
        <mock-styled.div
          classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
        />
      </mock-styled.div>
      <form />
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="mock-css. mock-css."
        >
          <mock-styled.span
            classname="mock-css. mock-css.
  font-size: 1.25rem;
"
          >
            <svg />
          </mock-styled.span>
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      will-test-dev-co-voracious-person
    </mock-styled.h1>
    <mock-styled.div
      classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
    >
      <mock-styled.div>
        <mock-styled.input
          id="general"
          name="app-edit-tabs"
          type="radio"
          value="general"
        />
        <mock-styled.label
          htmlfor="general"
        >
          <span
            class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
          >
            About Listings
          </span>
        </mock-styled.label>
        <mock-styled.input
          id="app-listing"
          name="app-edit-tabs"
          type="radio"
          value="app-listing"
        />
        <mock-styled.label
          htmlfor="app-listing"
        >
          <span
            class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
          >
            AppMarket Listing
          </span>
        </mock-styled.label>
        <mock-styled.input
          id="authentication"
          name="app-edit-tabs"
          type="radio"
          value="authentication"
        />
        <mock-styled.label
          htmlfor="authentication"
        >
          <span
            class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
          >
            Authentication
          </span>
        </mock-styled.label>
        <mock-styled.input
          id="permissions"
          name="app-edit-tabs"
          type="radio"
          value="permissions"
        />
        <mock-styled.label
          htmlfor="permissions"
        >
          <span
            class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
          >
            Permissions
          </span>
        </mock-styled.label>
        <mock-styled.input
          id="ac-integration"
          name="app-edit-tabs"
          type="radio"
          value="ac-integration"
        />
        <mock-styled.label
          htmlfor="ac-integration"
        >
          <span
            class="mock-css.
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 0.25rem 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 0.5rem;
  border-bottom: 2px solid var(--color-white);
  white-space: nowrap;
"
          >
            AgencyCloud Integration
          </span>
        </mock-styled.label>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  width: 100%;
  justify-content: space-evenly;
"
      />
    </mock-styled.div>
    <form />
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="mock-css. mock-css."
      >
        <mock-styled.span
          classname="mock-css. mock-css.
  font-size: 1.25rem;
"
        >
          <svg />
        </mock-styled.span>
        <mock-styled.div />
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditPage should match snapshot where loading apps 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditPage should match snapshot where no app found 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css. mock-css. mock-css. mock-css."
      >
        <div
          class="mock-css.
  padding: 0 0.5rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </div>
        <div
          class="mock-css.
  padding: 0.75rem 1.25rem;
  opacity: 0;
  transition: 0.5s;
  width: 100%;
"
        >
          No record of this app found
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css. mock-css. mock-css. mock-css."
    >
      <div
        class="mock-css.
  padding: 0 0.5rem;
  display: flex;
  align-items: center;
  border-radius: var(--default-border-radius) 0 0 var(--default-border-radius);
  cursor: pointer;

  , {
    color: var(--color-white);
  }
"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </div>
      <div
        class="mock-css.
  padding: 0.75rem 1.25rem;
  opacity: 0;
  transition: 0.5s;
  width: 100%;
"
      >
        No record of this app found
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    />
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
